Add ArticleConnector test, Update tests

--- a/composer.json
+++ b/composer.json
@@ -36,8 +36,13 @@
     },
     "scripts": {
         "test": "./vendor/bin/phpunit --testsuite connection",
-        "test-at": "./vendor/bin/phpunit --testsuite article-type",
-        "test-ct": "./vendor/bin/phpunit --testsuite container-type",
-        "test-all": "./vendor/bin/phpunit --testsuite all"
+        "test--all": "./vendor/bin/phpunit --testsuite all",
+
+        "test--c-a": "./vendor/bin/phpunit --testsuite connector--article",
+        "test--c-at": "./vendor/bin/phpunit --testsuite connector--article-type",
+        "test--c-ct": "./vendor/bin/phpunit --testsuite connector--container-type",
+
+        "test--b-a": "./vendor/bin/phpunit --testsuite behaviors--attribute",
+        "test--b-ag": "./vendor/bin/phpunit --testsuite behaviors--attribute-group"
     }
 }
